--- a/news/src/components/section4/Section4.module.css
+++ b/news/src/components/section4/Section4.module.css
@@ -72,3 +72,58 @@
     font-size: 30px;
     font-weight: 900;
   }
+  @media screen and (min-width: 320px) and (max-width: 768px){
+    .love {
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+      margin-bottom: 60px;
+      text-align: center;
+      width: 110%;
+    }
+  
+    .gues img {
+      padding-left: 15px;
+      width: 300px;
+      height: auto;
+    }
+  
+    .text2 {
+      align-items: center;
+      width: 90%;
+      max-width: 300px;
+    }
+  
+    .qui {
+      font-size: 13px;
+      line-height: 1.5;
+    }
+  
+    .company {
+      font-size: 12px;
+    }
+  
+    .abus {
+      font-size: 24px;
+    }
+  
+    .more {
+      width: 80%;
+      max-width: 150px;
+      height: 35px;
+      font-size: 12px;
+    }
+  
+    .var {
+      gap: 8px;
+    }
+  
+    .ship {
+      font-size: 24px;
+    }
+  
+    .team {
+      font-size: 10px;
+    }
+  }
+  
