--- a/news/src/components/section1/Section1.module.css
+++ b/news/src/components/section1/Section1.module.css
@@ -94,3 +94,37 @@
     text-align: center;
     margin-bottom: 60px;
   }
+  @media screen and (min-width: 320px) and (max-width: 768px){
+    .wrapper{
+      width: 110%;
+      height: 200px;
+    }
+    .shop{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .us{
+      padding-right: 25px;
+      font-size: 23px;
+    }
+    .lorem{
+      font-size: 13px;
+      width: 130%;
+    }
+    .now{
+      width: 100px;
+      height: 30px;
+    }
+    .club{
+      width: 100px;
+      height: 30px;
+    }
+    .dolor{
+      padding-left: 35px;
+      width: 110%;
+    }
+    .text{
+      padding-left: 35px;
+    }
+  }
