--- a/news/src/components/section2/Section2.module.css
+++ b/news/src/components/section2/Section2.module.css
@@ -82,3 +82,49 @@
     text-align: center;
     margin-bottom: 60px;
   }
+  @media screen and (min-width: 320px) and (max-width: 768px) {
+    .site {
+      width: 110%;
+      height: 200px;
+    }
+  
+    .get {
+      gap: 10px;
+      height: 250px;
+    }
+  
+    .par {
+      font-size: 18px;
+      text-align: center;
+      padding: 0 10px;
+    }
+  
+    .email input {
+      width: 150px;
+      height: 30px;
+      font-size: 14px;
+    }
+  
+    .sub {
+      width: 120px;
+      height: 30px;
+      font-size: 14px;
+    }
+  
+    .amet {
+      width: 100%;
+      font-size: 12px;
+      
+    }
+    .feat{
+      font-size: 20px;
+      padding-left: 35px;
+    }
+  
+    .elit {
+      width: 110%;
+      font-size: 12px;
+      padding-left: 35px;
+    }
+  }
+  
