--- a/news/src/components/section7/Section7.module.css
+++ b/news/src/components/section7/Section7.module.css
@@ -84,3 +84,60 @@
     font-size: 30px;
     font-weight: 900;
   }
+  @media screen and (min-width: 320px) and (max-width: 768px){
+    .mor {
+      width: 90%;
+      grid-template-columns: 1fr; 
+      gap: 20px;
+    }
+  
+    .oni {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      align-items: center;
+    }
+  
+    .pie {
+      width: 40px;
+      height: 40px;
+      font-size: 30px;
+    }
+  
+    .only {
+      font-size: 14px;
+      text-align: center;
+    }
+  
+    .business {
+      font-size: 12px;
+      text-align: center;
+    }
+  
+    .lorem {
+      width: 100%;
+      font-size: 12px;
+    }
+  
+    .lmore {
+      font-size: 13px;
+      text-align: center;
+      padding-top: 5px;
+    }
+  
+    .beggi {
+      gap: 10px;
+      margin-bottom: 40px;
+    }
+  
+    .serr {
+      font-size: 10px;
+      text-align: center;
+    }
+  
+    .wee {
+      font-size: 20px;
+      text-align: center;
+    }
+  }
+  
